--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-cryptojs",
-  "version": "2.4.5",
+  "version": "2.4.6",
   "description": "A small wrapper for integrating crypto-js into VueJS",
   "main": "dist/vue-cryptojs.min.js",
   "scripts": {
@@ -29,7 +29,7 @@
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "^7.10.4",
     "babel-preset-minify": "^0.5.2",
-    "vue": "^2.6.11"
+    "vue": "2.6.11"
   },
   "dependencies": {
     "crypto-js": "^4.0.0"
